[package]
name = "coredump-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
libc = "0.2"

[profile.dev]
split-debuginfo = "packed"

[profile.dev-lt]
inherits = "dev"
debug = "line-tables-only" # no module names or variables in core dump

[profile.dev-limited]
inherits = "dev"
debug = "limited" # no variables in core dump

[profile.release]
debug = "full"
split-debuginfo = "packed"
